frontend: fix ultrawide thumbnails overflowing

--- a/dearrow-browser-frontend/index.scss
+++ b/dearrow-browser-frontend/index.scss
@@ -221,6 +221,8 @@ body {
   > .thumbnail {
     min-width: 0;
     min-height: 0;
+    max-width: 100%;
+    max-height: 100%;
     flex-shrink: 1;
     flex-grow: 1;
   }
